--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: java
-install: sudo apt-get install -y ant
+install:
+  - sudo apt-get install -y ant
   - sudo apt-get install ant-optional
 jdk: oraclejdk11
